@@ -73,3 +73,4 @@
 	* Free hashes on init error
 	* efreet_cache_icon -> efreet_icon for functions in efreet_icon.c
 	* Fix memleak in desktop cache create
+	* Pass dirs to desktop cache process as arguments
